# agent_system_assignment

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: shorttrack.launch
model/: go2.urdf
model/sub2_com_fric0.2-1.8_kp18-30_kv0.7-1.2_rotI0.01-0.15_iter200/: cfgs.pkl  cfgs.yaml  events.out.tfevents.1747572013.JACKSON.235231.0  policy_traced.pt
projects/: athletics-log.cnoid  athletics.cnoid  shorttrack-log.cnoid  shorttrack.cnoid
projects/athletics-log/: athletics
projects/athletics-log/HVAC2023_athletics_field/: HVAC2023_athletics_field.body
projects/shorttrack-log/Floor/: Floor.body
projects/shorttrack-log/Floor/Floor/: GroundShorttrack.mtl
src/: CMakeLists.txt  Go2InferenceController.cpp  ShorttrackController.cpp  pid_controller.py
src/genesis_code/: go2_env.py  go2_eval.py  go2_train.py
test/: pid_controller_test.py
